--- a/src/scss/base/icons.scss
+++ b/src/scss/base/icons.scss
@@ -9,3 +9,13 @@ svg.svg-profile{
 	transition: .3s; 
 	
 }
+.svg-chevron{
+	width: remy(24);
+	height: remy(24);
+	color: $accent;
+}
+.svg-exit{
+	width: remy(19);
+	height: remy(19);
+	color: $red;
+}
