--- a/src/scss/base/var.scss
+++ b/src/scss/base/var.scss
@@ -2,6 +2,11 @@ $font: 'Gilroy';
 // colors
 $text: #333333;
 $menuColor: #272727;
-$dark:#1C274C ;
+
+$dark:#1C274C ;//-цвет иконок в меню
 $accent: #007AFF;
-$grey: rgba(51, 51, 51, 0.40);
+$bsh: 0px 0px 4px 2px rgba(151, 151, 151, 0.10);//-тень
+$bgColor: white;
+$greyText: rgba(51, 51, 51, 0.40);//-серый текст
+$greyBorder:#E3E3E3;//-цыет бордера
+$red: #FF5811;//-красный
