--- a/src/scss/blocks/nav-menu.scss
+++ b/src/scss/blocks/nav-menu.scss
@@ -1,17 +1,45 @@
 @import "../base/var.scss";
+
+.nav-menu-panel{
+	height: remy(90);
+	padding-top: remy(12);
+	padding-bottom: remy(32);
+	background-color: $bgColor;
+	border-radius: 1rem 1rem 0 0;
+	border-top: 1px solid $greyBorder;
+	position: fixed;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	&:after{
+		content: '';
+		display: block;
+		height: remy(5);
+		width: remy(129);
+		background-color: $menuColor;
+		position: absolute;
+		bottom: remy(8);
+		left: 50%;
+		transform: translateX(-50%);
+
+	}
+	
+}
 .nav-menu{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   align-items: center;
+  width: remy(360);
+  margin: 0 auto;
   a{
 	font-size: 12px;
 	color: $menuColor;
 	text-align: center;
 	min-width: remy(90);
-	height: remy(46);
+	
 	span{
 		display: block;
-		margin-top: 8px;
+		margin-top: 2px;
 		}
 	}
 	a.active svg, a:hover svg{color: $accent;}
