--- a/src/pug/pages/icons.pug
+++ b/src/pug/pages/icons.pug
@@ -5,6 +5,45 @@ block content
 		a(href="main.html") Главная
 
 		ul
+			a(href="").link-right Подробнее
+			pre.
+				a(href="").link-right Вернуться назад
+			hr
+			a(href="").link-left Вернуться назад
+			pre.
+				a(href="").link-left Вернуться назад
+			hr
+			button.btn Button
+			pre.
+				button.btn Button
+			li
+				a(href="#!").icon-link
+					span Подробнее
+					svg.svg-chevron
+						use(href="./img/spriteSvg.svg#svg-chevron")
+				pre.
+					span Подробнее
+					svg.svg-chevron
+						use(href="./img/spriteSvg.svg#svg-chevron")	
+			li
+				svg.svg-notify
+					use(href="./img/spriteSvg.svg#svg-notify")
+				pre.
+					svg.svg-notify
+						use(href="./img/spriteSvg.svg#svg-notify")
+			li
+				svg.svg-search
+					use(href="./img/spriteSvg.svg#svg-search")
+				pre.
+					svg.svg-search
+						use(href="./img/spriteSvg.svg#svg-search")
+			li
+				svg.svg-sort
+					use(href="./img/spriteSvg.svg#svg-sort")
+				pre.
+					svg.svg-sort
+						use(href="./img/spriteSvg.svg#svg-sort")
+			
 			li
 				svg.svg-exit
 					use(href="./img/spriteSvg.svg#svg-exit")
@@ -42,7 +81,33 @@ block content
 					svg.svg-profile
 						use(href="./img/spriteSvg.svg#svg-profile")
 	
-
+			li
+				.tabs
+					//========= tabs toggle menu ========
+					.tabs-menu
+						nav
+							button.tabs-menu__item.active(tab-btn="1") Назначенные
+							button.tabs-menu__item(tab-btn="2") Ожидающие
+							button.tabs-menu__item(tab-btn="3") Завершенные
+						
+					//========= tabs content ========
+					.tabs-content
+						//========== контент Назначенные =======
+						.tabs-body.active(tab-body="1")
+							h1.h1 Content 1
+						//========== контент Назначенные =======
+						.tabs-body(tab-body="2")
+							h1.h1 Content 2
+						//========== контент Назначенные =======
+						.tabs-body(tab-body="3")
+							h1.h1 Content 3
+			li
+				button.search-icon
+			li
+				button.icon-link
+					svg.svg-sort
+						use(href="./img/spriteSvg.svg#svg-sort")
+					span Сортировать
 
 block variables
 	-var title = "Page";
