--- a/src/scss/base/typography.scss
+++ b/src/scss/base/typography.scss
@@ -1,1 +1,50 @@
 @import "var.scss";
+.h1{
+	font-size: remy(24);
+	font-weight:600;
+}
+.icon-link, .link-right, .link-left{
+	display: inline-flex;
+	align-items: center;
+	column-gap:remy(4);
+	transition: .3s;
+	color: $accent;
+	cursor: pointer;
+}
+.link-left{
+	position: relative;
+	&:before {
+		content: '';
+		width: remy(19);
+		height: remy(19);
+		background-size: auto;
+		background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='7' height='13' viewBox='0 0 7 13' fill='none'%3e%3cpath d='M5.875 0.958496L1.125 6.50016L5.875 12.0418' stroke='%23007AFF' stroke-width='1.2' stroke-linecap='round' stroke-linejoin='round'/%3e%3c/svg%3e");
+	}
+
+	&:hover {
+		color: $text;
+
+		&:before {
+			background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='7' height='13' viewBox='0 0 7 13' fill='none'%3e%3cpath d='M5.875 0.958496L1.125 6.50016L5.875 12.0418' stroke='%23333333' stroke-width='1.2' stroke-linecap='round' stroke-linejoin='round'/%3e%3c/svg%3e");
+		}
+	}
+}
+.link-right{
+	position: relative;
+	
+		&:after {
+			content: '';
+			width: remy(19);
+			height: remy(19);
+			background-size: auto;
+			background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='19' height='19' viewBox='0 0 19 19' fill='none'%3e%3cpath d='M7.125 3.95834L11.875 9.50001L7.125 15.0417' stroke='%23007AFF' stroke-width='1.2' stroke-linecap='round' stroke-linejoin='round'/%3e%3c/svg%3e");
+		}
+	
+		&:hover {
+			color: $text;
+	
+			&:after {
+				background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='19' height='19' viewBox='0 0 19 19' fill='none'%3e%3cpath d='M7.125 3.95834L11.875 9.50001L7.125 15.0417' stroke='%23333333' stroke-width='1.2' stroke-linecap='round' stroke-linejoin='round'/%3e%3c/svg%3e");
+			}
+		}
+}
