--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,8 +2,10 @@
 @import "base/base";
 @import "base/typography";
 @import "base/icons";
+@import "base/buttons";
 
 @import "blocks/nav-menu";
+@import "blocks/tabs";
 //sections
 
  @import "sections/header";
