--- a/src/pug/pages/icons.pug
+++ b/src/pug/pages/icons.pug
@@ -104,9 +104,8 @@ block content
 			li
 				button.search-icon
 			li
-				button.icon-link
-					svg.svg-sort
-						use(href="./img/spriteSvg.svg#svg-sort")
+				button.btn-sort
+					span.icon-sort
 					span Сортировать
 
 block variables
