--- a/src/scss/base/typography.scss
+++ b/src/scss/base/typography.scss
@@ -3,7 +3,7 @@
 	font-size: remy(24);
 	font-weight:600;
 }
-.icon-link, .link-right, .link-left{
+.icon-link, .link-right, .link-left,.btn-sort{
 	display: inline-flex;
 	align-items: center;
 	column-gap:remy(4);
@@ -47,4 +47,10 @@
 				background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='19' height='19' viewBox='0 0 19 19' fill='none'%3e%3cpath d='M7.125 3.95834L11.875 9.50001L7.125 15.0417' stroke='%23333333' stroke-width='1.2' stroke-linecap='round' stroke-linejoin='round'/%3e%3c/svg%3e");
 			}
 		}
+}
+.btn-sort{color: $text;}
+.icon-sort {
+	width: remy(19);
+	height: remy(19);
+	background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='17' height='17' viewBox='0 0 17 17' fill='none'%3e%3cpath d='M2.83398 12.0415H7.79232' stroke='%23007AFF' stroke-width='1.2' stroke-linecap='round'/%3e%3cpath d='M2.83398 8.5L7.79232 8.5' stroke='%23007AFF' stroke-width='1.2' stroke-linecap='round'/%3e%3cpath d='M2.83398 4.9585L7.79232 4.9585' stroke='%23007AFF' stroke-width='1.2' stroke-linecap='round'/%3e%3cpath d='M12.041 2.83317L12.041 14.1665M12.041 2.83317L9.91602 5.6665M12.041 2.83317L14.166 5.6665M12.041 14.1665L14.166 11.3332M12.041 14.1665L9.91602 11.3332' stroke='%23007AFF' stroke-width='1.2' stroke-linecap='round' stroke-linejoin='round'/%3e%3c/svg%3e");
 }
