--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -4,6 +4,8 @@ block content
 	.container
 		a(href="main.html" style="display: block;") Главная
 		a(href="icons.html" style="display: block;") ICONS
+		a(href="monitoring.html" style="display: block;") Monitoring
+
 
 
 		header.header
