--- a/src/scss/base/typography.scss
+++ b/src/scss/base/typography.scss
@@ -3,6 +3,10 @@
 	font-size: remy(24);
 	font-weight:600;
 }
+.title-20{
+	font-size: remy(20);
+	font-weight: 500;
+}
 .icon-link, .link-right, .link-left,.btn-sort{
 	display: inline-flex;
 	align-items: center;
