--- a/src/scss/base/var.scss
+++ b/src/scss/base/var.scss
@@ -1,5 +1,6 @@
 $font: 'Gilroy';
 // colors
+$white: #ffffff;
 $text: #333333;
 $menuColor: #272727;
 $svgSearch: #272727;
@@ -11,3 +12,4 @@ $bgColor: white;
 $txtGrey: rgba(51, 51, 51, 0.40);//-серый текст
 $greyBorder:#E3E3E3;//-цыет бордера
 $red: #FF5811;//-красный
+$lightGrey:#CDCDCD;
