--- a/src/pug/pages/monitoring.pug
+++ b/src/pug/pages/monitoring.pug
@@ -36,20 +36,20 @@ block content
 						+task-card
 						+task-card
 						+task-card
-						+task-card
+						
 
-					//========== контент Назначенные =======
+					//========== контент Ожидающие =======
 					.tabs-body.task-cards-wrapper(tab-body="2")
-						+task-card
-						+task-card
-						+task-card
-						+task-card
-					//========== контент Назначенные =======
+						+task-card-pending
+						+task-card-pending
+						+task-card-pending
+					
+					//========== контент Завершенные =======
 					.tabs-body.task-cards-wrapper(tab-body="3")
-						+task-card
-						+task-card
-						+task-card
-						+task-card
+						+task-card-completed
+						+task-card-completed
+						+task-card-completed
+						+task-card-completed
 	
 	//========== footer ==========
 	footer.nav-menu-panel
