--- a/src/pug/mixins/mixins.pug
+++ b/src/pug/mixins/mixins.pug
@@ -23,7 +23,7 @@ mixin task-card
 		.tc__text Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis
 		.tc__footer
 			a(href="#!").link-right Подать заявку
-			a(href="#!" ).btn Подробнее
+			a(href="single-task-page.html" ).btn Подробнее
 
 mixin task-card-pending
 	.task-card.pending-task
@@ -49,7 +49,7 @@ mixin task-card-pending
 			
 		.tc__text Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis
 		.tc__footer
-			a(href="#!").link-right Подробнее
+			a(href="single-task-page.html").link-right Подробнее
 			a(href="#!" ).btn Подать заявку
 
 mixin task-card-completed
