--- a/src/scss/base/icons.scss
+++ b/src/scss/base/icons.scss
@@ -36,5 +36,13 @@ svg.svg-profile{
 }
 .svg-exit {color: $red;}
 .svg-search {color: $svgSearch;}
-	
-
+[class*="-icon"] {
+	display: inline-flex;
+	flex-shrink: 0;
+}
+.cross-icon {
+	height: remy(19);
+	width: remy(19);
+	background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3e%3cpath d='M18 6L6 18' stroke='%23FF2E00' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3e%3cpath d='M6 6L18 18' stroke='%23FF2E00' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3e%3c/svg%3e");
+	cursor: pointer;
+}
