--- a/src/scss/base/var.scss
+++ b/src/scss/base/var.scss
@@ -8,8 +8,12 @@ $svgSearch: #272727;
 $dark:#1C274C ;//-цвет иконок в меню
 $accent: #007AFF;
 $bsh: 0px 0px 4px 2px rgba(151, 151, 151, 0.10);//-тень
+
 $bgColor: white;
+$bodyBg: #F9F9F9;
+
 $txtGrey: rgba(51, 51, 51, 0.40);//-серый текст
 $greyBorder:#E3E3E3;//-цыет бордера
+
 $red: #FF5811;//-красный
 $lightGrey:#CDCDCD;
