--- a/src/pug/pages/single-task-page.pug
+++ b/src/pug/pages/single-task-page.pug
@@ -70,6 +70,14 @@ block content
 					use(href="./img/spriteSvg.svg#svg-profile")
 				span Профиль
 
+	//========== вкладка На карте =========
+
+	.single-task-location
+		button.btn-back.btn-round
+		
+		.single-task-map
+			img(src="./img/map.webp", alt="map")
+		.single-task-details
 
 block variables
 	-var title = "Задача. Подробнее";
