--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,4 +16,6 @@
  @import "sections/header";
 
  @import "pages/monitoring";
+
  @import "pages/single-task-page";
+ @import "blocks/single-task-location";
