--- a/src/scss/base/buttons.scss
+++ b/src/scss/base/buttons.scss
@@ -25,3 +25,18 @@
 .btn-cancel{
 	color: $red;
 }
+.btn-round{
+	width: remy(38);
+	height: remy(38);
+	border-radius: 50%;
+	flex-shrink: 0;
+	background-color: $accent;
+	background-size: remy(24);
+	transition: .3s; 
+	&:hover{
+		background-color: lighten($accent, 10%);
+	}
+}
+.btn-back{
+	background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3e%3cpath d='M15 5L9 12L15 19' stroke='%23ffffff' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3e%3c/svg%3e");
+}
