--- a/src/scss/pages/monitoring.scss
+++ b/src/scss/pages/monitoring.scss
@@ -1,6 +1,6 @@
 @import "../base/var.scss";
 .monitoring-main{
-	padding: remy(8) 0;
+	padding-top: remy(8);
 	background-color: $bodyBg;
 	.tabs-menu{
 		position: sticky;
