--- a/src/scss/base/icons.scss
+++ b/src/scss/base/icons.scss
@@ -46,3 +46,9 @@ svg.svg-profile{
 	background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3e%3cpath d='M18 6L6 18' stroke='%23FF2E00' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3e%3cpath d='M6 6L18 18' stroke='%23FF2E00' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3e%3c/svg%3e");
 	cursor: pointer;
 }
+.round-check{
+	width: remy(24);
+	height: remy(24);
+	flex-shrink:0;
+	background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3e%3ccircle cx='12' cy='12' r='10' stroke='%23007AFF' stroke-width='1.5'/%3e%3cpath d='M8.5 12.5L10.5 14.5L15.5 9.5' stroke='%23007AFF' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3e%3c/svg%3e");
+}
