--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,6 +11,7 @@
 @import "blocks/sort-block";
 @import "blocks/sort-modal";
 @import "blocks/task-card";
+@import "blocks/simple-card";
 //sections
 
  @import "sections/header";
