fix-current-location

--- a/src/pug/pages/single-task-page.pug
+++ b/src/pug/pages/single-task-page.pug
@@ -41,31 +41,30 @@ block content
 				.tc__notice Внимание! Осталось #[span 22 ч. 29 мин.] на принятие решения по заказу
                 
 				.tc__footer
-					a(href="#!").link-right Чат с оператором
 					a(href="single-task-page.html" ).btn Принять
+					a(href="#!").link-right Чат с оператором
+					
 					
 					button.icon-link.btn-cancel
 						span Отказаться
 						span.cross-icon
 	
-	
-	
-	//========== footer ==========
+	//============= FOOTER =============
 	footer.nav-menu-panel
 		nav.nav-menu
-			a.active(href="#!")
+			a.active(href="monitoring.html")
 				svg.svg-monitoring
 					use(href="./img/spriteSvg.svg#svg-monitoring")
 				span Мониторинг
-			a(href="#!")
+			a(href="current-task-page.html")
 				svg.svg-task
 					use(href="./img/spriteSvg.svg#svg-task")
 				span Текущ задача
-			a(href="#!")
+			a(href="rating-page.html")
 				svg.svg-rating
 					use(href="./img/spriteSvg.svg#svg-rating")
 				span Рейтинг
-			a(href="#!")
+			a(href="profile-page.html")
 				svg.svg-profile
 					use(href="./img/spriteSvg.svg#svg-profile")
 				span Профиль
