--- a/src/scss/base/typography.scss
+++ b/src/scss/base/typography.scss
@@ -7,6 +7,7 @@
 	font-size: remy(20);
 	font-weight: 500;
 }
+.txt-14{font-size: 14px;}
 .icon-link, .link-right, .link-left,.btn-sort{
 	display: inline-flex;
 	align-items: center;
@@ -58,3 +59,4 @@
 	height: remy(19);
 	background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='17' height='17' viewBox='0 0 17 17' fill='none'%3e%3cpath d='M2.83398 12.0415H7.79232' stroke='%23007AFF' stroke-width='1.2' stroke-linecap='round'/%3e%3cpath d='M2.83398 8.5L7.79232 8.5' stroke='%23007AFF' stroke-width='1.2' stroke-linecap='round'/%3e%3cpath d='M2.83398 4.9585L7.79232 4.9585' stroke='%23007AFF' stroke-width='1.2' stroke-linecap='round'/%3e%3cpath d='M12.041 2.83317L12.041 14.1665M12.041 2.83317L9.91602 5.6665M12.041 2.83317L14.166 5.6665M12.041 14.1665L14.166 11.3332M12.041 14.1665L9.91602 11.3332' stroke='%23007AFF' stroke-width='1.2' stroke-linecap='round' stroke-linejoin='round'/%3e%3c/svg%3e");
 }
+.txt-accent{color: $accent;}
