--- a/src/scss/blocks/task-card.scss
+++ b/src/scss/blocks/task-card.scss
@@ -83,6 +83,8 @@
 	align-items: center;
 	flex-direction: column;
 	row-gap: remy(16);
+	text-align: center;
+	
 }
 .tc__notice{
 	text-align: center;
