--- a/src/scss/sections/header.scss
+++ b/src/scss/sections/header.scss
@@ -36,7 +36,7 @@
 /******monitoring*********/
 .header{
 	background-color: $bodyBg;
-	
+	min-height: remy(48);
 	padding-block: remy(12);
 	.h1{text-align: center;}
 }
