--- a/src/pug/pages/current-task-page.pug
+++ b/src/pug/pages/current-task-page.pug
@@ -15,72 +15,77 @@ block content
 			.current-task-page__content
 				.simple-card
 					p Статус задачи
-					.icon-link.txt-accent.title-small
+					.icon-link.txt-accent.title-20
 						span.round-check
 						span Утверждён для выполнения
 					p.txt-14 Вы выбраны исполнителем данной задачи
+				
+				.simple-card
+					p Обратный отсчёт:
+					p.txt-accent.title-20 22 ч. 53 мин. 20 сек.
+					p.txt-14 Осталось времени до выезда на объект	
 			
-			
-			.task-card
-				.tc__header Название задачи, которе может переноситья на следующую строку, а потом и на ещё 1
-				
-				.tc__body
-					.tc__state Статус: #[span в процессе]
+				//========= карточка с описанием ==========
+				.current-task-card.toggle-class.open
+					.tc__header Название задачи, которе может переноситья на следующую строку, а потом и на ещё 1
+					
+					.hide-details__close.toggle-class-remove
+						p Свернуть подробности
+						svg.svg-chevron
+							use(href="./img/spriteSvg.svg#svg-chevron")
+							
+						//========== скрытый блок ==========
+					.hide-details.tc__body
+						//=========== task description =========
+						.tc__text Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis
+						
+						.tc__price Потенциальная оплата: #[span 20 000] ₽ 
+					
+						.tc__date
+							.tc__cell Дата начало: #[span 08.10.23] в 
+							.tc__cell Дата окончания: #[span 18.10.23] в #[span 19:00]
 
-					.tc__price Потенциальная оплата: #[span 20 000] ₽ 
-					
-					.tc__date
-						.tc__cell Дата начало: #[span 08.10.23] в 
-						.tc__cell Дата окончания: #[span 18.10.23] в #[span 19:00]
-
-					.tc__time
-						.time-start Время начала труд. дня: #[span  9:00] 
-						.time-finish Время окончания  труд. дня: #[span 19:00]
-					
-					.tc__contractor Кол-во людей: #[span 6]
-					
-					.tc__requir Требования к форме: требуется, выдадут на месте
-					.tc__location МО, г. Москва, Тверской рай-н Тверская, 1
-					
-					a(href="#!" frame-btn="location").link-right Показать на карте
-				
-				.tc__text Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis
-				
-				.tc__notice Внимание! Осталось #[span 22 ч. 29 мин.] на принятие решения по заказу
-                
-				.tc__footer
-					a(href="#!").link-right Чат с оператором
-					a(href="single-task-page.html" ).btn Принять
-					
-					button.icon-link.btn-cancel
-						span Отказаться
-						span.cross-icon
+						.tc__time
+							.time-start Время начала труд. дня: #[span  9:00] 
+							.time-finish Время окончания  труд. дня: #[span 19:00]
+						
+						.tc__contractor Кол-во людей: #[span 6]
+						
+						.tc__requir Требования к форме: требуется, выдадут на месте
+						.tc__location МО, г. Москва, Тверской рай-н Тверская, 1
+						a(href="#!" frame-btn="location").link-right Показать на карте
+					.tc__footer
+						a(href="single-task-page.html" ).btn Выезд на объект
+						a(href="chat-page.html" ).btn-outline.link-right
+							span Чат с оператором
+						
+						button.icon-link.btn-cancel
+							span Отказаться
+							span.cross-icon
 	
-	
-	
-	//========== footer ==========
+	//============= FOOTER =============
 	footer.nav-menu-panel
 		nav.nav-menu
-			a.active(href="#!")
+			a(href="monitoring.html")
 				svg.svg-monitoring
 					use(href="./img/spriteSvg.svg#svg-monitoring")
 				span Мониторинг
-			a(href="#!")
+			a.active(href="current-task-page.html")
 				svg.svg-task
 					use(href="./img/spriteSvg.svg#svg-task")
 				span Текущ задача
-			a(href="#!")
+			a(href="rating-page.html")
 				svg.svg-rating
 					use(href="./img/spriteSvg.svg#svg-rating")
 				span Рейтинг
-			a(href="#!")
+			a(href="profile-page.html")
 				svg.svg-profile
 					use(href="./img/spriteSvg.svg#svg-profile")
 				span Профиль
 
 	//========== вкладка На карте =========
 
-	.single-task-location.toggle-class(frame-modal="location")
+	.single-task-location.single-task--current.toggle-class(frame-modal="location")
 		.custom-container.flex-column
 			button.btn-back.btn-round(frame-close)
 			//========= map ==========
@@ -93,10 +98,18 @@ block content
 				.visible-details
 					.hide-details__open.toggle-class-add
 					
-					.tc__header Название задачи, которе может переноситья на следующую строку, а потом и на ещё 1
+					.tc__header Название задачи, которое может переноситья на следующую строку, а потом и на ещё 1
 					
 					.tc__location МО, г. Москва, Тверской рай-н Тверская, 1
 
+					.btn Прибыл(а) на объект
+					
+					.simple-card
+						p Обратный отсчёт:
+						p.txt-accent.title-20 22 ч. 53 мин. 20 сек.
+						p.txt-14 Осталось времени до выезда на объект				
+				
+				
 				//========== скрытый блок ==========
 				.hide-details.tc__body
 					.hide-details__close.toggle-class-remove
