--- a/src/pug/pages/monitoring.pug
+++ b/src/pug/pages/monitoring.pug
@@ -51,22 +51,22 @@ block content
 						+task-card-completed
 						+task-card-completed
 	
-	//========== footer ==========
+	//============= FOOTER =============
 	footer.nav-menu-panel
 		nav.nav-menu
-			a.active(href="#!")
+			a.active(href="monitoring.html")
 				svg.svg-monitoring
 					use(href="./img/spriteSvg.svg#svg-monitoring")
 				span Мониторинг
-			a(href="#!")
+			a(href="current-task-page.html")
 				svg.svg-task
 					use(href="./img/spriteSvg.svg#svg-task")
 				span Текущ задача
-			a(href="#!")
+			a(href="rating-page.html")
 				svg.svg-rating
 					use(href="./img/spriteSvg.svg#svg-rating")
 				span Рейтинг
-			a(href="#!")
+			a(href="profile-page.html")
 				svg.svg-profile
 					use(href="./img/spriteSvg.svg#svg-profile")
 				span Профиль
