--- a/src/pug/pages/current-task-page-2.pug
+++ b/src/pug/pages/current-task-page-2.pug
@@ -86,11 +86,11 @@ block content
 					use(href="./img/spriteSvg.svg#svg-profile")
 				span Профиль
 
-	//========== макет 22-23  вкладка На карте =========
+	//========== вкладка На карте =========
+
 	.single-task-location.single-task--current.toggle-class(frame-modal="location")
 		.custom-container.flex-column
-			.fix-header
-				button.btn-back.btn-round(frame-close)
+			button.btn-back.btn-round(frame-close)
 			//========= map ==========
 			.single-task-map
 				img(src="./img/map.webp", alt="map")
@@ -105,7 +105,7 @@ block content
 					
 					.tc__location МО, г. Москва, Тверской рай-н Тверская, 1
 
-					button(frame-btn="visit-location").btn Прибыл(а) на объект
+					.btn Прибыл(а) на объект
 					
 					.simple-card
 						p Обратный отсчёт:
@@ -136,115 +136,5 @@ block content
 					.tc__contractor Кол-во людей: #[span 6]
 					
 					.tc__requir Требования к форме: требуется, выдадут на месте
-
-	//========== макет 24 -  вкладка ВЫЕЗД НА ОБЪЕКТ =========
-	.single-task-location.single-task--current.toggle-class(frame-modal="visit-location")
-		.custom-container.flex-column
-			.fix-header.fix-header--visit
-				.btn-round-white
-					span.clock-icon
-				p Обратный отсчёт завершён. Необходимо начать работу
-				button.btn-back.btn-round(frame-close)
-			
-			//========= map ==========
-			.single-task-map
-				img(src="./img/map.webp", alt="map")
-			
-			//========= карточка с описанием ==========
-			.single-task-details.box-shadow
-				//==========видимая часть ==========
-				.visible-details
-					.hide-details__open.toggle-class-add
-					
-					.tc__header Название задачи, которое может переноситья на следующую строку, а потом и на ещё 1
-					
-					.tc__location МО, г. Москва, Тверской рай-н Тверская, 1
-
-					button(frame-btn="start-work").btn Прибыл(а) на объект
-					
-					.simple-card
-						p Обратный отсчёт:
-						p.txt-accent.title-20 22 ч. 53 мин. 20 сек.
-						p.txt-14 Осталось времени до выезда на объект
-				
-				
-				//========== скрытый блок ==========
-				.hide-details.tc__body
-					.hide-details__close.toggle-class-remove
-						p Свернуть подробности
-						svg.svg-chevron
-							use(href="./img/spriteSvg.svg#svg-chevron")
-						
-					//=========== task description =========
-					.tc__text Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis
-					
-					.tc__price Потенциальная оплата: #[span 20 000] ₽ 
-				
-					.tc__date
-						.tc__cell Дата начало: #[span 08.10.23] в 
-						.tc__cell Дата окончания: #[span 18.10.23] в #[span 19:00]
-
-					.tc__time
-						.time-start Время начала труд. дня: #[span  9:00] 
-						.time-finish Время окончания  труд. дня: #[span 19:00]
-					
-					.tc__contractor Кол-во людей: #[span 6]
-					
-					.tc__requir Требования к форме: требуется, выдадут на месте
-
-	//========== макет 25 - вкладка НАЧАЛ ВЫПОЛНЕНИЕ РАБОТЫ =========
-	.single-task-location.single-task--current.toggle-class(frame-modal="start-work")
-		.custom-container.flex-column
-			.fix-header
-				button.btn-back.btn-round(frame-close)
-			
-			//========= map ==========
-			.single-task-map
-				img(src="./img/map.webp", alt="map")
-			
-			//========= карточка с описанием ==========
-			.single-task-details.box-shadow
-				//==========видимая часть ==========
-				.visible-details
-					.hide-details__open.toggle-class-add
-					
-					.tc__header Название задачи, которое может переноситья на следующую строку, а потом и на ещё 1
-					
-					.tc__location МО, г. Москва, Тверской рай-н Тверская, 1
-
-					a(href="task-page-finish-work.html").btn Начал(а) выполнение задачи
-					
-					.simple-card
-						p Обратный отсчёт:
-						p.txt-accent.title-20 22 ч. 53 мин. 20 сек.
-						p.txt-14 Осталось времени до выезда на объект
-				
-				
-				//========== скрытый блок ==========
-				.hide-details.tc__body
-					.hide-details__close.toggle-class-remove
-						p Свернуть подробности
-						svg.svg-chevron
-							use(href="./img/spriteSvg.svg#svg-chevron")
-						
-					//=========== task description =========
-					.tc__text Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis
-					
-					.tc__price Потенциальная оплата: #[span 20 000] ₽ 
-				
-					.tc__date
-						.tc__cell Дата начало: #[span 08.10.23] в 
-						.tc__cell Дата окончания: #[span 18.10.23] в #[span 19:00]
-
-					.tc__time
-						.time-start Время начала труд. дня: #[span  9:00] 
-						.time-finish Время окончания  труд. дня: #[span 19:00]
-					
-					.tc__contractor Кол-во людей: #[span 6]
-					
-					.tc__requir Требования к форме: требуется, выдадут на месте
-
-	
-
 block variables
 	-var title = "Задача. Подробнее";
