--- a/src/pug/pages/task-page-finish-work-2.pug
+++ b/src/pug/pages/task-page-finish-work-2.pug
@@ -21,7 +21,7 @@ block content
 						
 			
 				//========= карточка с описанием ==========
-				.current-task-card.toggle-class.open
+				.current-task-card.toggle-class
 					.tc__header Название задачи, которе может переноситья на следующую строку, а потом и на ещё 1
 					
 					.hide-details__close.toggle-class-remove
@@ -51,10 +51,10 @@ block content
 						
 					
 				.stage-work__btn
-					a(href="").btn
+					a(href="task-page-finish-work-3.html").btn
 						span Получил(а) оплату
 						svg.svg-check
-							use(href=",.img/spriteSvg.svg#svg-check")
+							use(href="./img/spriteSvg.svg#svg-check")
 	
 	//============= FOOTER =============
 	footer.nav-menu-panel
