--- a/src/pug/pages/task-page-finish-work-3.pug
+++ b/src/pug/pages/task-page-finish-work-3.pug
@@ -16,8 +16,8 @@ block content
 				h1.h1 Выполнение задачи
 				
 				.simple-card
-					p До конца рабочего дня:
-					p.txt-accent.title-20 0 ч. 0 мин. 0 сек.
+					span.check-icon
+					p.txt-accent.title-20 Оплата получена
 						
 			
 				//========= карточка с описанием ==========
@@ -51,11 +51,8 @@ block content
 						
 					
 				.stage-work__btn
-					a(href="task-page-finish-work-2.html").btn
-						span Завершил(а) выполнение
-						svg.svg-check
-								use(href="./img/spriteSvg.svg#svg-check")
-	
+					a(href="monitoring.html").btn-grey Закрыть страницу
+						
 	//============= FOOTER =============
 	footer.nav-menu-panel
 		nav.nav-menu
