--- a/src/pug/pages/single-task-page.pug
+++ b/src/pug/pages/single-task-page.pug
@@ -77,7 +77,7 @@ block content
 				button.btn-back.btn-round(frame-close)
 			//========= map ==========
 			.single-task-map
-				img(src="./img/map.webp", alt="map")
+				script(type='text/javascript' charset='utf-8' async='' src='https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A13e02d731c04b56220a2a064d1fa54db38ac5402f907fd4bdf75e632a107fa8e&width=100%&height=100%&lang=ru_RU&scroll=false')
 			
 			//========= карточка с описанием ==========
 			.single-task-details.box-shadow
@@ -92,7 +92,7 @@ block content
 				//========== скрытый блок ==========
 				.hide-details.tc__body
 					.hide-details__close.toggle-class-remove
-						p Свернуть подробности
+						p Подробнее о задаче
 						svg.svg-chevron
 							use(href="./img/spriteSvg.svg#svg-chevron")
 						
