--- a/src/pug/pages/current-task-page.pug
+++ b/src/pug/pages/current-task-page.pug
@@ -30,7 +30,7 @@ block content
 					.tc__header Название задачи, которе может переноситья на следующую строку, а потом и на ещё 1
 					
 					.hide-details__close.toggle-class-remove
-						p Свернуть подробности
+						p Подробнее о задаче
 						svg.svg-chevron
 							use(href="./img/spriteSvg.svg#svg-chevron")
 							
@@ -93,7 +93,8 @@ block content
 				button.btn-back.btn-round(frame-close)
 			//========= map ==========
 			.single-task-map
-				img(src="./img/map.webp", alt="map")
+				script(type='text/javascript' charset='utf-8' async='' src='https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A13e02d731c04b56220a2a064d1fa54db38ac5402f907fd4bdf75e632a107fa8e&width=100%&height=100%&lang=ru_RU&scroll=false')
+
 			
 			//========= карточка с описанием ==========
 			.single-task-details.box-shadow
@@ -116,7 +117,7 @@ block content
 				//========== скрытый блок ==========
 				.hide-details.tc__body
 					.hide-details__close.toggle-class-remove
-						p Свернуть подробности
+						p Подробнее о задаче
 						svg.svg-chevron
 							use(href="./img/spriteSvg.svg#svg-chevron")
 						
@@ -148,7 +149,7 @@ block content
 			
 			//========= map ==========
 			.single-task-map
-				img(src="./img/map.webp", alt="map")
+				script(type='text/javascript' charset='utf-8' async='' src='https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A13e02d731c04b56220a2a064d1fa54db38ac5402f907fd4bdf75e632a107fa8e&width=100%&height=100%&lang=ru_RU&scroll=false')
 			
 			//========= карточка с описанием ==========
 			.single-task-details.box-shadow
@@ -171,7 +172,7 @@ block content
 				//========== скрытый блок ==========
 				.hide-details.tc__body
 					.hide-details__close.toggle-class-remove
-						p Свернуть подробности
+						p Подробнее о задаче
 						svg.svg-chevron
 							use(href="./img/spriteSvg.svg#svg-chevron")
 						
@@ -200,7 +201,7 @@ block content
 			
 			//========= map ==========
 			.single-task-map
-				img(src="./img/map.webp", alt="map")
+				script(type='text/javascript' charset='utf-8' async='' src='https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A13e02d731c04b56220a2a064d1fa54db38ac5402f907fd4bdf75e632a107fa8e&width=100%&height=100%&lang=ru_RU&scroll=false')
 			
 			//========= карточка с описанием ==========
 			.single-task-details.box-shadow
@@ -223,7 +224,7 @@ block content
 				//========== скрытый блок ==========
 				.hide-details.tc__body
 					.hide-details__close.toggle-class-remove
-						p Свернуть подробности
+						p Подробнее о задаче
 						svg.svg-chevron
 							use(href="./img/spriteSvg.svg#svg-chevron")
 						
