--- a/src/pug/pages/task-page-finish-work-3.pug
+++ b/src/pug/pages/task-page-finish-work-3.pug
@@ -25,7 +25,7 @@ block content
 					.tc__header Название задачи, которе может переноситья на следующую строку, а потом и на ещё 1
 					
 					.hide-details__close.toggle-class-remove
-						p Свернуть подробности
+						p Подробнее о задаче
 						svg.svg-chevron
 							use(href="./img/spriteSvg.svg#svg-chevron")
 							
@@ -51,7 +51,7 @@ block content
 						
 					
 				.stage-work__btn
-					a(href="monitoring.html").btn-grey Закрыть страницу
+					a(href="index.html").btn-grey Закрыть страницу
 						
 	//============= FOOTER =============
 	footer.nav-menu-panel
