--- a/src/scss/blocks/single-task-location.scss
+++ b/src/scss/blocks/single-task-location.scss
@@ -12,6 +12,7 @@
 .custom-container {
 	position: relative;
 	margin: 0 auto;
+	width: 100%;
 	max-width: remy(375);
 	.fix-header{
 		padding-inline:1rem ;
