--- a/src/pug/layouts/layout.pug
+++ b/src/pug/layouts/layout.pug
@@ -18,5 +18,7 @@ html(lang="ru")
 		block content
 		
 		
-		//=============== мои скрипты ===================	
+		//=============== мои скрипты ===================
+		
+		script(src="js/mobileSwipe.js")
 		script(src="js/main.js")
