--- a/src/pug/pages/current-task-page.pug
+++ b/src/pug/pages/current-task-page.pug
@@ -100,7 +100,7 @@ block content
 			.single-task-details.box-shadow
 				//==========видимая часть ==========
 				.visible-details
-					.hide-details__open.toggle-class-add
+					.hide-details__open.toggle-class-add#swipe1
 					
 					.tc__header Название задачи, которое может переноситья на следующую строку, а потом и на ещё 1
 					
@@ -155,7 +155,7 @@ block content
 			.single-task-details.box-shadow
 				//==========видимая часть ==========
 				.visible-details
-					.hide-details__open.toggle-class-add
+					.hide-details__open.toggle-class-add#swipe2
 					
 					.tc__header Название задачи, которое может переноситья на следующую строку, а потом и на ещё 1
 					
@@ -207,7 +207,7 @@ block content
 			.single-task-details.box-shadow
 				//==========видимая часть ==========
 				.visible-details
-					.hide-details__open.toggle-class-add
+					.hide-details__open.toggle-class-add#swipe3
 					
 					.tc__header Название задачи, которое может переноситья на следующую строку, а потом и на ещё 1
 					
