--- a/src/pug/pages/single-task-page.pug
+++ b/src/pug/pages/single-task-page.pug
@@ -83,7 +83,7 @@ block content
 			.single-task-details.box-shadow
 				//==========видимая часть ==========
 				.visible-details
-					.hide-details__open.toggle-class-add
+					.hide-details__open.toggle-class-add#swipe1
 					
 					.tc__header Название задачи, которе может переноситья на следующую строку, а потом и на ещё 1
 					
