--- a/src/pug/layouts/layout-swipe-touch.pug
+++ b/src/pug/layouts/layout-swipe-touch.pug
@@ -19,4 +19,6 @@ html(lang="ru")
 		
 		
 		//=============== мои скрипты ===================
+		
+		script(src="js/mobileSwipe.js")
 		script(src="js/main.js")
