--- a/src/scss/blocks/single-task-location.scss
+++ b/src/scss/blocks/single-task-location.scss
@@ -56,6 +56,7 @@
 }
 .hide-details{
 	max-height: calc(100vh - 350px);
+	max-height: 390px;
 	overflow: hidden;
 	overflow-y: auto;
 	scrollbar-width: none;
